[project]
name = "semantic-cache"
version = "0.1.0"
description = "Semantic Caching on python functions"
authors = [{ name = "Rajaniraiyn R", email = "rajaniraiyn@gmail.com" }]
readme = "README.md"
requires-python = ">= 3.8"
dependencies = ["qdrant-client[fastembed]>=1.8.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/semantic_cache"]
